cmake_minimum_required (VERSION 3.6)

project(TestGame)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/) 

add_subdirectory(DirectXTex)
add_subdirectory(game100)
add_subdirectory(game200)
add_subdirectory(game300)
add_subdirectory(game400)
add_subdirectory(game500)
add_subdirectory(game501)